--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^9.16.0",
     "eslint-plugin-vue": "^9.32.0",
     "prettier": "^3.4.2",
+    "sass-embedded": "^1.82.0",
     "vite": "^6.0.3",
     "vite-plugin-vue-devtools": "^7.6.7"
   }
